--- a/README.rdoc
+++ b/README.rdoc
@@ -37,7 +37,7 @@ Attempting to get the user's <tt>login</tt> will cause the real user document to
   class User
     #...
     
-    def cached_attributes
+    def cachable_attributes
       [ :login ]
     end
   end
